@startuml

title __SERVER's Class Diagram__\n

  namespace Clinic.Server {
    class Clinic.Server.Server {
        {static} + main()
    }
  }
  

  namespace Clinic.Server {
    class Clinic.Server.ServerDirector {
        + createAppointment()
        + getAllAppointmentOfPatient()
        + getAllDiagnosisFromPatient()
        + getAllDoctor()
        + getAllPatient()
        + getAllPrescriptionFromPatient()
        + getAllSchedule()
        + getCurrentAppointmentDoctor()
        + getCurrentAppointmentOfPatient()
        + getDoctorWithId()
        + getScheduleOfDoctor()
        + login()
        + logout()
        + setDoctor()
        + setSchedule()
    }
  }
  

  namespace Clinic.Server {
    class Clinic.Server.ServerSecretary {
        - avaiableID : int
        - clientTokens : List<Token>
        + ServerSecretary()
        + getMyServer()
        + handleMessageFromClient()
        + setMyServer()
        - findToken()
        - logout()
    }
  }
  

  Clinic.Server.ServerSecretary o-- Clinic.Server.ServerDirector : director
  Clinic.Server.ServerSecretary o-- Clinic.Server.Connection.MyServer : myServer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
